reset sidebar ui

--- a/src/assets/styles/themes/dark-side.scss
+++ b/src/assets/styles/themes/dark-side.scss
@@ -1,8 +1,8 @@
 @import "./lib.scss";
 // menu colors
-$menuBgColor: #141414;
+$menuBgColor: #001529;
 $activeTextColor: #409eff;
-$textColor: #f5f5f5;
+$textColor: #bbbbbb;
 
 :export {
   menuColor: $menuBgColor;
