--- a/src/assets/styles/themes/theme-colors.scss
+++ b/src/assets/styles/themes/theme-colors.scss
@@ -58,15 +58,15 @@
 
 @function getDarkSideMaps($primaryColor) {
   @return (
-    dark-side-menuBgColor: #141414,
-    dark-side-contentBgColor: #0f0f10,
+    dark-side-menuBgColor: #001529,
+    dark-side-contentBgColor: #001529,
     dark-side-activeTextColor: #ffffff,
-    dark-side-textColor: #f5f5f5,
+    dark-side-textColor: #bbbbbb,
     dark-side-menuActiveBgColor: $primaryColor,
     dark-side-badgeColor: $primaryColor,
-    dark-side-headerBgColor: #141414,
-    dark-side-headerTextColor: #ffffff,
-    dark-side-headerBorderColor: #3a3a3a,
+    dark-side-headerBgColor: #ffffff,
+    dark-side-headerTextColor: #333333,
+    dark-side-headerBorderColor: #f5f5f5,
     dark-side-headerShadow: #f5f5f5f5,
     dark-side-headerTabItemBgColor: #e8f4ff,
     dark-side-headerTabItemActiveBgColor: #e8f4ff,
@@ -93,9 +93,9 @@
     blue-side-textColor: #f5f5f5,
     blue-side-menuActiveBgColor: mix($primaryColor, rgba(0, 0, 0, 0.5)),
     blue-side-badgeColor: $primaryColor,
-    blue-side-headerBgColor: #409eff,
-    blue-side-headerTextColor: #ffffff,
-    blue-side-headerBorderColor: #4390e0bf,
+    blue-side-headerBgColor: #ffffff,
+    blue-side-headerTextColor: #333333,
+    blue-side-headerBorderColor: #f5f5f5,
     blue-side-headerShadow: #f5f5f5f5,
     blue-side-headerTabItemBgColor: #e8f4ff,
     blue-side-headerTabItemActiveBgColor: #e8f4ff,
